# swiggy-assignment-genai

./: .gitignore  README.md  api.py  app.py  pyproject.toml
examples/: sample_ip_op_2025-06-03 14:12:51.json  sample_ip_op_2025-06-03 14:14:11.json  sample_ip_op_2025-06-03 14:14:55.json  sample_ip_op_2025-06-03 14:16:04.json  sample_ip_op_2025-06-03 14:17:01.json  sample_ip_op_2025-06-03 14:17:43.json  sample_ip_op_2025-06-03 14:18:33.json  sample_ip_op_2025-06-03 14:49:49.json  sample_ip_op_2025-06-03 14:51:41.json
src/: agent.py  prompts.py  utils.py
