[project]
name = "swiggy-genai-assignment"
version = "0.1.0"
description = "personal assistant bot"
authors = [
    {name = "Abhishek Ranjan",email = "aviranjan444@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.4.7,<0.5.0)",
    "openai (>=1.82.1,<2.0.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "chainlit (>=2.5.5,<3.0.0)",
    "duckduckgo-search (>=8.0.2,<9.0.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "pretty (>=0.1,<0.2)",
    "rich (>=14.0.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
